File directory changes

--- a/Python/templates/login.html
+++ b/Python/templates/login.html
@@ -10,5 +10,5 @@
 		<button id="login">Login</button>
 	</body>
 
-	<script src="login.js"> </script>
+	<script src="/static/JavaScript/login.js"> </script>
 </html>
