Trying to set all notes on main page

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -6,7 +6,14 @@
 
 	<body>
 		<p>This is the main page</p>
+
+		<button id="createButton">Create new note</button>
+		
+		<!--Where all of the notes will be displayed at-->
+		<div id="noteView">
+
+		</div>
 	</body>
 
-	<script src="JavaScript/main.js"> </script>
+	<script src="static/JavaScript/main.js"> </script>
 </html>
