Added button to create new notes

--- a/Python/templates/new_note.html
+++ b/Python/templates/new_note.html
@@ -10,6 +10,8 @@
 
 		<h4>Note Content:</h4>
 		<input id="noteContent"> </input>
+
+		<button id="sendNote">Create Note</button>
 	</body>
 
 	<script src="static/JavaScript/newNote.js"> </script>
