Edit note changes

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -15,8 +15,10 @@
 		<div id="noteView">
 
 		</div>
-
-		<p id="noteDisplay"> </p>
+		
+		// Where the notes will be displayed once I click on the corresponding
+		// note button
+		<div id="noteDisplay"> </div>
 	</body>
 
 	<script src="static/JavaScript/main.js"> </script>
