Main.js note fixed

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -16,8 +16,8 @@
 
 		</div>
 		
-		// Where the notes will be displayed once I click on the corresponding
-		// note button
+		<!--Where the notes will be displayed once I click on the corresponding
+	  	note button-->
 		<div id="noteDisplay"> </div>
 	</body>
 
