--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -10,7 +10,7 @@
 	<body>
 		<p>This is the main page</p>
 
-		<button id="createButton">Create new note</button>
+		<button id="createButton" onclick="NewNote()">Create new note</button>
 		
 		<!--Where all of the notes will be displayed at-->
 		<div id="noteView">
