--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -32,7 +32,7 @@
           						<span aria-hidden="true">&times;</span>
         					</button>
       					</div>
-      					<div class="modal-body" id="noteBody">
+      					<div class="modal-body" id="noteContent">
         					...
       					</div>
       					<div class="modal-footer">
