Updated to paragraph to display contents

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -38,12 +38,12 @@
           						<span aria-hidden="true">&times;</span>
         					</button>
       					</div>
-      					<div class="modal-body" id="noteContent">
-        					
+      					<div class="modal-body">
+        					<p id="noteContent"> </p>	
       					</div>
       					<div class="modal-footer">
         					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        					<button type="button" class="btn btn-primary">Save changes</button>
+        					<button type="button" class="btn btn-primary" id="editNote">Save Edits</button>
       					</div>
     				</div>
   			</div>
