--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -39,7 +39,7 @@
         					</button>
       					</div>
       					<div class="modal-body">
-        					<p id="noteContent"> </p>	
+        					<input id="noteContent"> </input>	
       					</div>
       					<div class="modal-footer">
         					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
