Change input to textarea

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -39,7 +39,7 @@
         					</button>
       					</div>
       					<div class="modal-body">
-        					<input id="noteContent" style="width: 572px; height: 200px;"> </input>	
+        					<textarea id="noteContent" wrap="soft"  style="width: 572px; height: 200px;"> </textarea>	
       					</div>
       					<div class="modal-footer">
         					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
