Started working on image uploading

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -19,6 +19,8 @@
 
 		<button id="createButton" onclick="NewNote()">Create new note</button>
 		
+		<button id="imageButton">Upload Image</button>
+
 		<!--Where all of the notes will be displayed at-->
 		<div id="noteView">
 
