--- a/Python/templates/new_note.html
+++ b/Python/templates/new_note.html
@@ -9,7 +9,7 @@
 		<input id="noteName"> </input>
 
 		<h4>Note Content:</h4>
-		<input id="noteContent"> </input>
+		<textarea wrap="soft"  id="noteContent"> </textarea>
 
 		<button id="sendNote">Create Note</button>
 	</body>
