Function implement change

--- a/Python/templates/main.html
+++ b/Python/templates/main.html
@@ -19,7 +19,7 @@
 
 		<button id="createButton" onclick="NewNote()">Create new note</button>
 		
-		<button id="imageButton">Upload Image</button>
+		<button id="imageButton" onclick="NewImage()">Upload Image</button>
 
 		<!--Where all of the notes will be displayed at-->
 		<div id="noteView">
