--- a/Python/templates/upload_image.html
+++ b/Python/templates/upload_image.html
@@ -3,13 +3,15 @@
 	<head>
 		<title>Upload Image</title>
 
-		<script src="static/JavaSript/base.js"> </script>
+		<script src="static/JavaScript/base.js"> </script>
 		<script src="static/JavaScript/image.js"> </script>
 	</head>
 
 	<body>
 		<h4>Upload Image</h4>
-		<input type="file"> </input>
+		<input id="upload" type="file"> </input>
+		<br>
+		<img id="myImg" src="#">
 	</body>
 
 </html>
