Function click change

--- a/Python/templates/upload_image.html
+++ b/Python/templates/upload_image.html
@@ -10,7 +10,7 @@
 	<body>
 		<h4>Upload Image</h4>
 		<input id="upload" type="file"> </input>
-		<button id="save">Save Uploaded Image</button>
+		<button id="save" onclick="SaveImage()">Save Uploaded Image</button>
 		<br>
 		<img id="myImg" src="#">
 	</body>
